--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "github":"https://github.com/Prohorovdo",
   "name": "shopping-cart",
   "version": "0.1.0",
   "private": true,
@@ -13,8 +14,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
